--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.76.0",
     "antd": "^5.24.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
