--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@daily-co/daily-js": "^0.76.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "@mui/x-date-pickers": "^7.28.2",
     "antd": "^5.24.4",
+    "axios": "^1.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.0",
